[package]
name = "doryen-rs"
version = "1.2.4"
authors = ["jice <jice.nospam@gmail.com>"]
description = "Pure rust OpenGL accelerated roguelike console API with native/wasm support"
license = "MIT"
edition = "2018"
documentation = "https://docs.rs/doryen-rs"
repository = "https://github.com/jice-nospam/doryen-rs"
keywords = ["roguelike", "console", "opengl", "wasm"]
homepage = "https://jice-nospam.github.io/doryen-rs/index.html"

[dependencies]
uni-gl = "0.1.*"
uni-app = "0.1.*"

[dependencies.image]
version = "0.22.*"
default-features = false
features = ["png_codec"]

[dev-dependencies]
unicode-segmentation = "1.6.0"
doryen-fov="0.1.*"

[features]
