[package]
name = "doryen-rs"
version = "1.3.0"
authors = ["jice <jice.nospam@gmail.com>"]
description = "Pure rust OpenGL accelerated roguelike console API with native/wasm support"
license = "MIT"
edition = "2021"
documentation = "https://docs.rs/doryen-rs"
repository = "https://github.com/jice-nospam/doryen-rs"
keywords = ["roguelike", "console", "opengl", "wasm"]
homepage = "https://jice-nospam.github.io/doryen-rs/index.html"
exclude = ["www/*"]

[dependencies]
uni-gl = "0.2.*"
uni-app = "0.2.*"

[dependencies.image]
version = "0.23.*"
default-features = false
features = ["png"]

[dev-dependencies]
unicode-segmentation = "1.6.0"
doryen-fov = "0.1.*"

[features]
