[package]
name = "doryen-rs-example"
version = "1.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# change this to compile another example with wasm-pack
path = "basic.rs"

[dependencies]
uni-app = { path = "../../uni-app" }
doryen-rs = { path = ".." }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.83"
