[package]
name = "doryen-rs-example"
version = "1.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# change this to compile another example with wasm-pack
path = "subcell.rs"

[dependencies]
uni-app = "0.2.*"
doryen-rs = { path = ".." }
unicode-segmentation = "1.6.0"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.83"
